testfx/errors/error_tests/edge_14_double_colon.fx
// 测试: 使用 :: 双冒号
x :: 10
println(x)
